Start to revise experimental details.

--- a/paper.tex
+++ b/paper.tex
@@ -444,25 +444,32 @@ well known transfer matrix method \notaL{refs}.
 \begin{figure}
   \centering
   \includegraphics[scale=0.6]{Images/DE1}
-\caption{\emph{Schematic of the experimental set-up for
-      fabrication of porous silicon with GRIN. (a) Represents an
-      outline of the surface section, divided by three regions
-      A, B and C, corresponding to High, Medium and Low Porosity
-      respectively. (b) It is the diagram of the electrochemical
-      cell with its parts: silicon wafer, Teflon cell, platinum
-      point electrode, Electrochemical Aqueous solution and the
-      connection of the circuit with the cathode and anode. (c)
-      It is a schematic drawing of the Cross section of the
-      electrochemically attacked porous silicon seen in three
-      different regions as mentioned above. }}
+\caption{(a) \notaL{reordenar figura} Experimental set-up for
+      fabrication of porous silicon with GRIN, consisting of a
+      rectangular electrochemical cell. We indicate the Si wafer, the
+      teflon cell, the platinum point electrode, the electrolyte and the
+      current source. (b) Top and (c) side schematic views of the resulting sample,
+      illustrating three regions $A$, $B$ and $C$ of relatively high, medium and
+      low porosity respectively illustrating the change gradient in
+      pore size and depth. }}
     \label{fig:DE1}
   \end{figure}
 
-In the Fig. \ref{fig:DE1} a shows schematic representation of the
-experimental setup where porous silicon can be manufactured with GRIN,
+Fig. \ref{fig:DE1} shows a schematic representation of our
+experimental setup to manufacture porous silicon with GRIN.
+\notaL{La figura está feita. Hay un abultamiento extraño en la
+  punta. Debería verse el aislamiento y la punta descubierta y más
+  sumergida. La letra está demasiado chica. El gradiente de porosidad va
+  en la dirección opuesta. El panel (a) tiene una discontinuidad. ¿Tú
+  la hiciste o la adaptaste? Usa dos paréntesis (a), (b),
+  (c). Alínealos. Pon primero la preparación y luego los resultados
+  vistos de arriba y de lado. Está en desorden. Se ve muy descuidada. No dice nada sobre la
+  preparación que no esté en la figura 1. Dos páneles no ilustran el
+  método experimental, sino el resultado. Quizás yo la quitaría.}
 taking into account the considerations of the electrode as tip, the
 rectangular cell and the sample (silicon wafer) with the largest
 rectangular attack area.
+
 In Fig. \ref{fig:DE1} a) we draw an outline of the surface section,
 divided by three regions A, B and C, dependes in therir porosity i.e.,
 High, Medium and Low Porosity. All this corresponding to  expected to
