Correct small mistake

--- a/paper.tex
+++ b/paper.tex
@@ -451,7 +451,7 @@ well known transfer matrix method \notaL{refs}.
       current source. (b) Top and (c) side schematic views of the resulting sample,
       illustrating three regions $A$, $B$ and $C$ of relatively high, medium and
       low porosity respectively illustrating the change gradient in
-      pore size and depth. }}
+      pore size and depth. }
     \label{fig:DE1}
   \end{figure}
 
