Modifice el paper.tex y añadi la grafica celda1.png

--- a/paper.tex
+++ b/paper.tex
@@ -173,7 +173,7 @@ point current source.
       revista.}}\notaL{\sout{En la punta pusiste dos esferas. Quítalas y sólo
     pon un puntito dorado del ancho del cable. Muestra que la base
     está aterrizada}}\notaL{\sout{Indica el voltaje y la
-    corriente}}\notaL{\sout{¿Está bien la polaridad de la batería?}}}
+    corriente}}\notaL{\sout{¿Está bien la polaridad de la batería?}}
     just the tip uncovered and located at $\bm r_0=(x_0,y_0,z_0)$ within the
     liquid.\notaL{Quité el tipo de letra del pie de figura. Que la pongan en la
       revista.}\notaL{En la punta pusiste dos esferas. Quítalas y sólo
@@ -852,12 +852,8 @@ for each of the chosen currents.
             measurement point. Therefore,  $d_i$ is the total
             thickness calculated for each of the measurements,
             defining a i = $ A, B, C$. Having the following
-            relationship $d_{_{i}} =
-            (N_{_{Hi}}d_{_{Hi}})+(N_{_{Li}}d_{_{Li}}) +
-            (2d_{_{Hi}})$. }
-            relationship $d_i =
-            (N_{Hi}d_{Hi})+(N_{Li}d_{Li}) +
-            (2d_{Hi})$. }}
+            relationship $d_i =(N_{Hi}d_{Hi})+(N_{Li}d_{Li}) +
+            (2d_{Hi})$. }
 	\label{fig:MCGRIN0}
 \end{figure}
 The Fig. \ref{fig:MCGRIN0} the scheme of  a initially proposed lateral
